--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "seed": "node models/sees/recordSeeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
