--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "seed": "node models/sees/recordSeeder.js",
+    "seed": "node models/seeds/categorySeeder.js && node models/seeds/recordSeeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.1",
+    "handlebars": "^4.7.7",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
