--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.1",
-    "handlebars": "^4.7.7",
     "method-override": "^3.0.0",
+    "moment": "^2.29.2",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "passport": "^0.4.1",
